syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

message AbilityIdentifier {
	uint32 instanced_modifier_id = 13;
	int32 local_id = 15;
	uint32 ability_caster_id = 3; // ex
	uint32 modifier_owner_id = 2; // ex
	uint32 instanced_ability_id = 1;
	bool is_serverbuff_modifier = 14;
}
