syntax = "proto3";

option csharp_namespace = "Common.Protobuf";

import "AbilityInvokeEntry.proto";

// CmdId: 1196
// Name: NHHOLCBCDGJ
message AbilityInvocationsNotify {
    repeated AbilityInvokeEntry invokes = 15;
}

