syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

import "ForwardType.proto";
import "AbilityInvokeEntryHead.proto";
import "AbilityInvokeArgument.proto";

message AbilityInvokeEntry {
	bytes ability_data = 1;
	ForwardType forward_type = 11;
	bool is_ignore_auth = 3;
	uint32 event_id = 10;
	AbilityInvokeEntryHead head = 5;
	uint32 entity_id = 7;
	AbilityInvokeArgument argument_type = 13;
	uint32 forward_peer = 14;
	double total_tick_time = 6;
}
