syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

import "AbilityString.proto";

message AbilityMetaUpdateBaseReactionDamage {
	uint32 reaction_type = 1; // ex
	uint32 source_caster_id = 10; // ex
	AbilityString ability_name = 11;
	AbilityString global_value_key = 2;
}
