syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

import "AbilityIdentifier.proto";
import "Vector.proto";
import "HitCollision.proto";
import "AttackHitEffectResult.proto";

message AttackResult {
	uint32 EFLPPNEGGBA = 1359;
	uint32 KEOJHNJNBCA = 1494;
	uint32 hashed_anim_event_id = 1591;
	uint32 element_type = 3;
	float JFPIPJBGCAF = 1887;
	uint32 HCIDEIDGIJH = 1146;
	float element_durability_attenuation = 320;
	bool EBMCMIGLNAE = 1463;
	uint32 AJGKAMKLOFA = 531;
	int32 hit_retreat_angle_compat = 13;
	uint32 attacker_id = 2;
	uint32 defense_id = 7;
	float KAAMDHBKMMA = 1693;
	bool is_crit = 9;
	bool NDDKJHJDLHB = 817;
	AbilityIdentifier ability_identifier = 11;
	Vector resolved_dir = 6;
	HitCollision hit_collision = 5;
	uint32 amplify_reaction_type = 1931;
	uint32 FMBGJFKOFAF = 497;
	string anim_event_id = 1;
	uint32 attack_timestamp_ms = 1871;
	uint32 EMJEHAAAPHK = 1862;
	AttackHitEffectResult hit_eff_result = 14;
	uint32 GOEHHBEAPLO = 4;
	float damage = 15;
	uint32 ALNABAOBLFA = 8;
	float damage_shield = 1937;
	bool KIHOFNNGADG = 1930;
	uint32 ONMABCACMKP = 1369;
}
