syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

import "AbilityInvokeEntry.proto";

message ClientAbilityChangeNotify {
	bool is_init_hash = 9;
	repeated AbilityInvokeEntry invokes = 13;
	uint32 entity_id = 14;
}
