syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

import "AttackResult.proto";

message EvtBeingHitInfo {
	uint32 peer_id = 10;
	uint32 frame_num = 2;
	AttackResult attack_result = 11;
}
