syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

import "ResVersionConfig.proto";
import "ShortAbilityHashPair.proto";
import "StopServerInfo.proto";
import "FeatureBlockInfo.proto";
import "BlockInfo.proto";

message PlayerLoginRsp {
	string client_md5 = 102;
	string client_silence_version_suffix = 643;
	bool PCEDOAMCGKK = 252;
	bool BMHJNKFAAKL = 5;
	string country_code = 418;
	bool DHGOKGNGMMC = 77;
	int32 retcode = 3;
	bool FMBFGEAPJGE = 4;
	uint32 target_uid = 9;
	int32 ability_hash_code = 10;
	string msg = 313;
	uint64 login_rand = 7;
	bytes player_data = 6;
	bool is_transfer = 1701;
	bool is_data_need_relogin = 193;
	ResVersionConfig res_version_config = 1308;
	uint32 target_home_owner_uid = 1321;
	uint32 client_silence_data_version = 15;
	map<string, int32> ability_hash_map = 12;
	string next_resource_url = 577;
	bool GHCLMKADGBH = 601;
	double total_tick_time = 426;
	string ADJCHKHHDLF = 1527;
	string client_silence_md5 = 340;
	repeated ShortAbilityHashPair short_ability_hash_map = 1138;
	StopServerInfo DFFMGGODIII = 763;
	uint32 player_data_version = 2;
	repeated FeatureBlockInfo feature_block_info_list = 598;
	uint32 client_data_version = 11;
	string client_version_suffix = 470;
	string game_biz = 1;
	bytes sc_info = 673;
	bool OCPPNCCIPBI = 8;
	string birthday = 909;
	ResVersionConfig next_res_version_config = 187;
	map<uint32, BlockInfo> block_info_map = 1514;
	bool is_audit = 934;
}
